# Glen

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Logger.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp  stb.cpp
src/shaders/: default.frag  default.vert
